# filewatch

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  attendance_id  build.sh  build.zig  connect.bat  connect.sh  mingw-w64_toolchain.cmake
src/: httplib.hpp  main.cpp  quick_arg_parser.hpp
test/: reflect.py
